@@ -2,113 +2,125 @@ plugins {
   id 'java'
   id 'application'
 
-  // To create a fat jar build/libs/html-pretty-print-all.jar, run: ./gradlew shadowJar
-  id 'com.gradleup.shadow' version '8.3.3'
+  // To create a fat jar build/libs/...-all.jar, run: ./gradlew shadowJar
+  id 'com.gradleup.shadow' version '8.3.6'
 
-  // Formatting is disabled due to poor handling of type annotations; wait until
-  // this issue is fixed: https://github.com/google/google-java-format/issues/5
-  // // Code formatting with Google Java Format; defines targets "goJF" and "verJF".
-  // id 'com.github.sherter.google-java-format' version '0.7.1'
+/*
+  // Code formatting; defines targets "spotlessApply" and "spotlessCheck"
+  // Requires JDK 11 or higher; the plugin crashes under JDK 8.
+  id 'com.diffplug.spotless' version '7.0.3'
 
-  // // Error Prone linter
-  // id("net.ltgt.errorprone") version "1.2.1"
+  // Error Prone linter
+  id('net.ltgt.errorprone') version '4.2.0'
+*/
 
   // Checker Framework pluggable type-checking
-  // id 'org.checkerframework' version '0.5.13'
+  id 'org.checkerframework' version '0.6.53'
 }
 
 repositories {
-    mavenCentral()
+  mavenCentral()
+  maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
-    // This dependency is found on compile classpath of this component and consumers.
-    implementation 'com.google.guava:guava:30.0-jre'
+  // This dependency is found on compile classpath of this component and consumers.
+  implementation 'com.google.guava:guava:30.0-jre'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+  testImplementation("org.junit.jupiter:junit-jupiter:5.12.2")
+  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-    // https://mvnrepository.com/artifact/org.ccil.cowan.tagsoup/tagsoup
-    implementation group: 'org.ccil.cowan.tagsoup', name: 'tagsoup', version: '1.2.1'
+  // https://mvnrepository.com/artifact/org.ccil.cowan.tagsoup/tagsoup
+  implementation group: 'org.ccil.cowan.tagsoup', name: 'tagsoup', version: '1.2.1'
 
-    // https://mvnrepository.com/artifact/xom/xom
-    implementation group: 'xom', name: 'xom', version: '1.3.5'
+  // https://mvnrepository.com/artifact/xom/xom
+  implementation group: 'xom', name: 'xom', version: '1.3.5'
 
-    // errorprone 'com.google.errorprone:error_prone_core:2.9.0'
+  // errorprone 'com.google.errorprone:error_prone_core:2.9.0'
 }
 
 application {
-  mainClassName = 'org.plumelib.htmlprettyprint.HtmlPrettyPrint'
+  mainClass = 'org.plumelib.htmlprettyprint.HtmlPrettyPrint'
 }
 
 test {
-    useJUnitPlatform {
-        includeEngines 'junit-jupiter'
-        excludeEngines 'junit-vintage'
-    }
+  useJUnitPlatform {
+    includeEngines 'junit-jupiter'
+    excludeEngines 'junit-vintage'
+  }
 }
 
-/// Error Prone linter
+// Error Prone linter
 
-// dependencies {
-//   errorprone("com.google.errorprone:error_prone_core:2.9.0")
-//   // JDK 8 support for Error Prone:
-//   errorproneJavac("com.google.errorprone:javac:9+181-r4173-1")
-// }
-// tasks.withType(JavaCompile).configureEach {
-//   options.compilerArgs << "-Xlint:all" << "-Werror"
-//   options.errorprone {
-//     disable("ReferenceEquality") // Use Interning Checker instead.
-//   }
-//   if (JavaVersion.current() >= JavaVersion.VERSION_16) {
-//     options.fork = true
-//     options.forkOptions.jvmArgs += [
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-//             "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-//     ]
-//   }
-// }
+/*
+dependencies {
+  errorprone("com.google.errorprone:error_prone_core:${errorproneVersion}")
+}
+tasks.withType(JavaCompile).configureEach {
+  // "-processing" avoids javac warning "No processor claimed any of these annotations".
+  options.compilerArgs << '-Xlint:all,-processing' << '-Werror'
+  options.errorprone {
+    disable('ExtendsObject')  // Incorrect when using the Checker Framework
+    disable('ReferenceEquality') // Use Interning Checker instead.
+  }
+  options.errorprone.enabled = isJava17orHigher
+}
+*/
 
-/// Checker Framework pluggable type-checking
+// Checker Framework pluggable type-checking
 
-/*apply plugin: 'org.checkerframework'
+/*
+apply plugin: 'org.checkerframework'
 
 checkerFramework {
   checkers = [
-    'org.checkerframework.checker.formatter.FormatterChecker',
-    'org.checkerframework.checker.index.IndexChecker',
-    'org.checkerframework.checker.interning.InterningChecker',
-    'org.checkerframework.checker.lock.LockChecker',
-    'org.checkerframework.checker.nullness.NullnessChecker',
-    'org.checkerframework.checker.regex.RegexChecker',
-    'org.checkerframework.checker.signature.SignatureChecker',
-    'org.checkerframework.common.initializedfields.InitializedFieldsChecker'
+    // No need to run CalledMethodsChecker, because ResourceLeakChecker does so.
+    // 'org.checkerframework.checker.calledmethods.CalledMethodsChecker',
+  'org.checkerframework.checker.formatter.FormatterChecker',
+  'org.checkerframework.checker.index.IndexChecker',
+  'org.checkerframework.checker.interning.InterningChecker',
+  'org.checkerframework.checker.lock.LockChecker',
+  'org.checkerframework.checker.nullness.NullnessChecker',
+  'org.checkerframework.checker.regex.RegexChecker',
+    'org.checkerframework.checker.resourceleak.ResourceLeakChecker',
+  'org.checkerframework.checker.signature.SignatureChecker',
+    'org.checkerframework.checker.signedness.SignednessChecker',
+    'org.checkerframework.common.initializedfields.InitializedFieldsChecker',
   ]
   extraJavacArgs = [
-    '-Werror',
-    '-AcheckPurityAnnotations',
-    '-ArequirePrefixInWarningSuppressions',
-    '-AwarnUnneededSuppressions',
+  '-Werror',
+  '-AcheckPurityAnnotations',
+  '-ArequirePrefixInWarningSuppressions',
+    '-AwarnRedundantAnnotations',
+  '-AwarnUnneededSuppressions',
   ]
 }
-
-// To use a locally-built Checker Framework, run gradle with "-PcfLocal".
-if (project.hasProperty("cfLocal")) {
-  def cfHome = String.valueOf(System.getenv("CHECKERFRAMEWORK"))
+// To use a snapshot version of the Checker Framework.
+if (false) {
+  // TODO: Change the above test to false when CF is released.
+  ext.checkerFrameworkVersion = '3.49.2'
   dependencies {
-    compileOnly files(cfHome + "/checker/dist/checker-qual.jar")
-    testCompileOnly files(cfHome + "/checker/dist/checker-qual.jar")
-    checkerFramework files(cfHome + "/checker/dist/checker.jar")
+    compileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
+    testCompileOnly "org.checkerframework:checker-qual:${checkerFrameworkVersion}"
+    checkerFramework "org.checkerframework:checker:${checkerFrameworkVersion}"
   }
-}*/
+  configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'minutes'
+  }
+}
+// To use a locally-built Checker Framework, run gradle with "-PcfLocal".
+if (project.hasProperty('cfLocal')) {
+  def cfHome = String.valueOf(System.getenv('CHECKERFRAMEWORK'))
+  dependencies {
+    compileOnly files(cfHome + '/checker/dist/checker-qual.jar')
+    testCompileOnly files(cfHome + '/checker/dist/checker-qual.jar')
+    checkerFramework files(cfHome + '/checker/dist/checker.jar')
+  }
+  }
+}
+*/
 
-/// Javadoc
+// Javadoc
 
 // Turn Javadoc warnings into errors.
 javadoc {
@@ -121,20 +133,21 @@ configurations {
   requireJavadoc
 }
 dependencies {
-  requireJavadoc "org.plumelib:require-javadoc:1.0.0"
+  requireJavadoc 'org.plumelib:require-javadoc:1.0.9'
 }
 task requireJavadoc(type: JavaExec) {
+  group = 'Documentation'
   description = 'Ensures that Javadoc documentation exists.'
-  main = "org.plumelib.javadoc.RequireJavadoc"
+  mainClass = 'org.plumelib.javadoc.RequireJavadoc'
   classpath = configurations.requireJavadoc
-  args "src/main/java"
+  args 'src/main/java'
 }
 check.dependsOn requireJavadoc
 
-/// Emacs support
+// Emacs support
 
 /* Make Emacs TAGS table */
 task tags(type: Exec) {
-  description "Run etags to create an Emacs TAGS table"
-  commandLine "bash", "-c", "find src/ -name '*.java' | sort | xargs etags"
+  description = 'Run etags to create an Emacs TAGS table'
+  commandLine 'bash', '-c', "find src/ -name '*.java' | sort | xargs etags"
 }
